<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mensagens</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="email">E-mail</string>
    <string name="bem_vindo">Bem-vindo!</string>
    <string name="ola">Olá, fulano!</string>
    <string name="ok">OK</string>
    <string name="natal">Natal</string>
    <string name="feliz_natal">Feliz Natal!</string>

</resources>
